--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ venv
 .env
 app_backup.py
 app_backup_230116.py
+app_backup_230117.py
+app_backup_230118.py
+app_test.py
 test-hart.ipynb
 test-hart-checkpoint.ipynb
 app_wip_230111.py
+preset1_hart_backup.css
