Feature - added area comparison function

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ app_backup.py
 app_backup_230116.py
 app_backup_230117.py
 app_backup_230118.py
+app_backup_230118_2.py
 app_test.py
 test-hart.ipynb
 test-hart-checkpoint.ipynb
