Feature - Map and 2026 Projection, Fix - Deleted test notebook

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,14 @@ app_backup.py
 app_backup_230116.py
 app_backup_230117.py
 app_backup_230118.py
+app_backup_230125.py
 app_backup_230118_2.py
 app_test.py
 test-hart.ipynb
 test-hart-checkpoint.ipynb
+test-hart_area_code_mapping.ipynb
+test-hart_area_code_mapping-checkpoint.ipynb
 app_wip_230111.py
 preset1_hart_backup.css
+geo_db_uploader.py
+.~test-hart.ipynb
