--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ app_backup_230116.py
 app_backup_230117.py
 app_backup_230118.py
 app_backup_230125.py
+app_backup_230125_map.py
 app_backup_230118_2.py
 app_test.py
 test-hart.ipynb
