--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ app_wip_230111.py
 preset1_hart_backup.css
 geo_db_uploader.py
 .~test-hart.ipynb
+**/Census Divisions/
+**/Census SubDivisions/
+**/Province Boundaries/
