Fix - backed up previous version

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ app_backup_230117.py
 app_backup_230118.py
 app_backup_230125.py
 app_backup_230130.py
+app_backup_230131.py
 app_backup_230125_map.py
 app_backup_230118_2.py
 app_test.py
@@ -17,6 +18,7 @@ test-hart_area_code_mapping.ipynb
 test-hart_area_code_mapping-checkpoint.ipynb
 app_wip_230111.py
 preset1_hart_backup.css
+preset1_hart_backup_0131.css
 geo_db_uploader.py
 .~test-hart.ipynb
 **/Census Divisions/
