Fix - colors on map(coloring black for region which doesn't have data

--- a/.gitignore
+++ b/.gitignore
@@ -9,13 +9,18 @@ app_backup_230118.py
 app_backup_230125.py
 app_backup_230130.py
 app_backup_230131.py
+app_backup_230208.py
 app_backup_230125_map.py
 app_backup_230118_2.py
 app_test.py
 test-hart.ipynb
 test-hart-checkpoint.ipynb
+Untitled.ipynb
+Untitled-checkpoint.ipynb
 test-hart_area_code_mapping.ipynb
 test-hart_area_code_mapping-checkpoint.ipynb
+test-hart-Copy1.ipynb
+test-hart-Copy1-checkpoint.ipynb
 app_wip_230111.py
 preset1_hart_backup.css
 preset1_hart_backup_0131.css
