Fix - readded cd and province code to area selection dropdown

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ app_backup_230130.py
 app_backup_230131.py
 app_backup_230208.py
 app_backup_230213.py
+app_backup_230217.py
 app_backup_230125_map.py
 app_backup_230118_2.py
 app_test.py
