Fix - server issue

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ app_backup_230217.py
 app_backup_230223.py
 app_backup_230223_refactored.py
 app_backup_230227_page_split_test.py
+app_backup_230228_no_split.py
 app_backup_230125_map.py
 app_backup_230118_2.py
 app_test.py
