Fix - table widths, typos

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ preset1_hart_backup.css
 preset1_hart_backup_0131.css
 geo_db_uploader.py
 .~test-hart.ipynb
+test.html
 **/Census Divisions/
 **/Census SubDivisions/
 **/Province Boundaries/
