Fix - mobile scale down

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ preset1_hart_backup_0131.css
 geo_db_uploader.py
 .~test-hart.ipynb
 test.html
+test2.html
 **/Census Divisions/
 **/Census SubDivisions/
 **/Province Boundaries/
